--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body{
     object-fit: cover;
 }
 
-#camera--sensor{
+#camera--view{
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
